8282200: ShouldNotReachHere() reached by AsyncGetCallTrace after JDK-8280422